# handsfree

./: .README.md.swp  .gitignore  README.md  handsfree.service  main.py  mcp_client.py  mcp_config.json  pipeline.py  pyproject.toml  test_pipeline.py
servers/: datetime_server.py
servers/androidtv_mcp/: adbkey  adbkey.pub  main.py  pyproject.toml  server.py
